--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,7 +10,7 @@
   %ul#nav
     = tab_to "HOME", root_path
     = tab_to "ABOUT US", about_path
-    = tab_to "OUR PROJECTS", portfolio_path
+    = tab_to "OUR PROJECTS", projects_path
     = tab_to "OUR SERVICES", services_path
     = tab_to "OUR BLOG", blog_posts_path
     = tab_to "CONTACT US", "#contact"
