--- a/app/assets/stylesheets/clients.css.scss
+++ b/app/assets/stylesheets/clients.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .client-list {
-padding-top:50px;
+padding-top:30px;
 margin:auto;
 }
 
@@ -14,6 +14,7 @@ height:150px;
 float:left;
 margin-left:1px;
 margin-bottom:1px;
+cursor:pointer;
 }
 
 .client-list div:last-child:after {
