--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -872,7 +872,7 @@ overflow:hidden;
 
 
 .featured_projects {
-padding:50px 0px;
+padding:50px 0px 0px 0px;
 }
 @media only screen and (max-width: 768px) {
 .featured_projects div {
