--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,40 +3,26 @@
     #footer-nav
       %a{:id => "top-nav", :href => "#top"}
     %h2.blogpost Latest blog posts
-    -unless last_two_posts[0].nil?
-      #latest-blogs.divider
-        .post.first
-          .info
-            = image_tag "kovsky.png"
-            %span
-              = link_to last_two_posts[0].author.name, "#"
-              %br/
-              = last_two_posts[0].posted_on.strftime("%B %e, %Y")
-          .content
-            %h2
-              = link_to last_two_posts[0].title, last_two_posts[0]
-            %p
-              = preserve last_two_posts[0].preview_html.html_safe
-            .links
-              = link_to "Read more", last_two_posts[0], :class => "read-more"
-              |
-              %a.comments{:href => "#{polymorphic_url(last_two_posts[0])}#disqus_thread"}
-      .post
-        .info
-          = image_tag "ryan.png"
-          %span
-            = link_to last_two_posts[1].author.name, "#"
-            %br/
-            = last_two_posts[1].posted_on.strftime("%B %e, %Y")
-        .content
-          %h2
-            = link_to last_two_posts[1].title, last_two_posts[1]
-          %p
-            = preserve last_two_posts[1].preview_html.html_safe
-          .links
-            = link_to "Read more", last_two_posts[1], :class => "read-more"
-            |
-            %a.comments{:href => "#{polymorphic_url(last_two_posts[1])}#disqus_thread"}
+    -unless last_two_posts[0].nil? && last_two_posts[1].nil?
+      #latest-blogs.row
+        - last_two_posts.each do |post|
+          .six.column.post
+            .row
+              .three.columns.mobile-one
+                %div.post_pic(style="width:74px;height:74px;background:url(#{Gravatar.new(post.author.email).image_url(:size => 74)});border-radius:100px;border: 2px solid white;")
+                %span.post-info
+                  = link_to post.author.name, "#"
+                  %br/
+                  = post.posted_on.strftime("%B %e, %Y")
+              .content.nine.columns.mobile-three
+                %h2
+                  = link_to post.title, post
+                %p
+                  = preserve post.preview.html_safe
+                .links
+                  = link_to "Read more", post, :class => "read-more"
+                  |
+                  %a.comments{:href => "#{polymorphic_url(post)}#disqus_thread"}
     .footer-tweet
       %p
         Loading tweets, just a moment...
