--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,12 +1,25 @@
-%section.primary
-  %h1.formula Blog
-  - @posts.each do |post|
-    .wall-of-text
-      = render :partial => "post", :locals => {:post => post, :preview => true }
-      = link_to "Read More", blog_post_path(post)
-      - if admin_signed_in?
-        .post-admin
-          = link_to "Edit", edit_post_path(post)
-          = link_to("Publish", publish_post_path(post), :method => :put) unless post.published?
+= javascript_include_tag "pinterestize"
 
+%section.primary
+  %h1.formula Blog  
+  %ul.all_posts
+    - @posts.each do |post|
+      = render :partial => "post_box", :locals => {:post => post, :preview => true }
+      
   = paginate @posts
+  
+  
+  
+  
+%script(type="text/javascript")
+  $(document).ready(function () {
+  var options = {
+  autoResize: true, // This will auto-update the layout when the browser window is resized.
+  container: $('.primary'), // Optional, used for some extra CSS styling
+  offset: 10, // Optional, the distance between grid items
+  //itemWidth: 240 // Optional, the width of a grid item
+  };
+  var handler = $('.all_posts li');
+  handler.wookmark(options);
+  //$('.all_posts li').wookmark({offset: 2});
+  });
