--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,51 +1,4 @@
-%div#slider
-  %div.slide.first-slide
-    #blueprint-wrapper
-      = link_to "", "#", :class => :point1
-      = link_to "", "#", :class => :point2
-      = link_to "", "#", :class => :point3
-      = link_to "", "#", :class => :point4
-      = image_tag "blueprint.png"
-    %h1
-      FROM IDEA TO EXECUTION
-    %p
-      Here at Coshx we take complex problems and turn them into simple solutions.
-      %br/
-      Our highly skilled team of programmers and designers will take your product to the next level.
-      %br/
-      We love sending those rockets to the moon - why not let us launch a rocket of a product for you?
-      .divider
-
-      = link_to "#", :class => "blue-arrow" do
-        Read About How We Craft Software
-        .arrow
-
-  %div.slide	
-    = image_tag "blueprint.png"
-  %div.slide
-    = image_tag "blueprint.png"
-
-%script(type="text/javascript")
-  $(document).ready ( function () {
-  $('#slider').orbit({
-  animation: 'horizontal-push',                  // fade, horizontal-slide, vertical-slide, horizontal-push
-  animationSpeed: 800,                // how fast animtions are
-  timer: false, 			 // true or false to have the timer
-  resetTimerOnClick: false,           // true resets the timer instead of pausing slideshow progress
-  advanceSpeed: 4000, 		 // if timer is enabled, time between transitions 
-  pauseOnHover: false, 		 // if you hover pauses the slider
-  startClockOnMouseOut: false, 	 // if clock should start on MouseOut
-  startClockOnMouseOutAfter: 1000, 	 // how long after MouseOut should the timer start again
-  directionalNav: true, 		 // manual advancing directional navs
-  captions: true, 			 // do you want captions?
-  captionAnimation: 'fade', 		 // fade, slideOpen, none
-  captionAnimationSpeed: 800, 	 // if so how quickly should they animate in
-  bullets: false,			 // true or false to activate the bullet navigation
-  bulletThumbs: false,		 // thumbnails for the bullets
-  bulletThumbLocation: '',		 // location from this file where thumbs will be
-  afterSlideChange: function(){}, 	 // empty function    fluid: true       // or set a aspect ratio for content slides (ex: '4x3') 
-  });});
-
+= render :partial => "home/slider"
 
 
 .divider
