--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -1,8 +1,6 @@
 
 html {
-  border-top: 6px solid black;
-  border-left: 6px solid black;
-  border-right: 6px solid black;
+
   overflow-x:hidden;
 }
 
@@ -17,6 +15,10 @@ body {
   background: transparent image-url("tile_background.png");
   overflow-x:hidden;
   color:white;
+  
+
+  border-left: 6px solid black;
+  border-right: 6px solid black;
 }
 
 #logo {
@@ -31,10 +33,11 @@ body {
   width: 50px;
   height: 117px;
   background: transparent image-url("ribbon.png") no-repeat;
+  z-index:50;
   position: absolute;
   display: block;
   right: 0px;
-  top: -30px;
+  top: -6px;
   text-align: center;
   a {
     display: block;
@@ -114,7 +117,8 @@ border-top: 2px solid #1588C3;
 list-style-type:none;
 }
 
-header {
+#header {
+border-top: 6px solid black;
 position:relative;
 }
 
