footer blog's look improvement

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -409,3 +409,12 @@ color: #004264;
 .post .links {
 margin-top:10px;
 }
+
+
+footer .small-line {
+margin:20px auto;
+coontent: ' ';
+width:30px;
+height:1px;
+background:#004264;
+}
