--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -9,11 +9,12 @@
           .six.column.post
             .row
               .three.columns.mobile-one
-                %div.post_pic(style="width:74px;height:74px;background:url(#{Gravatar.new(post.author.email).image_url(:size => 74)});border-radius:100px;border: 2px solid white;")
+                %div.post_pic(style="width:74px;height:74px;background:url(#{Gravatar.new(post.author.email).image_url(:size => 74)});border-radius:100px;border: 4px solid white;")
                 %span.post-info
                   = link_to post.author.name, "#"
                   %br/
                   = post.posted_on.strftime("%B %e, %Y")
+                %div.small-line
               .content.nine.columns.mobile-three
                 %h2
                   = link_to post.title, post
