--- a/app/views/posts/_comments.html.haml
+++ b/app/views/posts/_comments.html.haml
@@ -1,20 +1,21 @@
-#disqus_thread
-:javascript
-  var disqus_shortname = '#{ENV['DISQUS_SHORTNAME'] || 'coshxlabsstaging'}'; // required: replace example with your forum shortname
-  (function() {
-      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-      dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-  })();
+.post-comments
+  #disqus_thread
+  :javascript
+    var disqus_shortname = '#{ENV['DISQUS_SHORTNAME'] || 'coshxlabsstaging'}'; // required: replace example with your forum shortname
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
 
 
-%noscript
-  Please enable JavaScript to view the
-  =link_to "comments powered by Disqus.", "http://disqus.com/?ref_noscript"
+  %noscript
+    Please enable JavaScript to view the
+    =link_to "comments powered by Disqus.", "http://disqus.com/?ref_noscript"
 
-%a{:href => 'http://disqus.com', :class => 'dsq-brlink'}
-  blog comments powered by
-  %span.logo-disqus
-    Disqus
+  %a{:href => 'http://disqus.com', :class => 'dsq-brlink'}
+    blog comments powered by
+    %span.logo-disqus
+      Disqus
 
 
