create nice urls for profiles, and now url to persons profile will be like person.url

--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -67,7 +67,7 @@
     %ul
       - @coshx_folks.each_with_index do |person, i|
         %li
-          %a{:href => "#"}
+          %a{:href => person.url}
             .portrait
 
             %div(style="width:180px;height:180px;background:url(#{Gravatar.new(person.email).image_url(:size => 180)});border-radius:100px;")
