--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -1,4 +1,15 @@
-@import "common";
+.folk_bio {
+padding-bottom:10px;
+maring-bottom:10px;
+border-bottom:2px solid #1588C3;
+
+}
+.folk_header {
+color:#1588C3;
+font: bold 18px 'PT Sans', sans-serif;
+}
+
+
 #admin-menu {
 
     span, em, div, ul, li {
@@ -27,4 +38,44 @@
     }
     ul { }
     li { }
+}
+
+
+
+
+#folk-slider {
+text-align:center;
+width:100%;
+height:900px !important;
+  span {
+  color:white;
+  }
+  .content {
+    text-align:left;
+  }
+  .slide {
+  width:100%;
+  left:-1000px;
+  }
+
+  .first-slide {
+    left:0px;
+  }
+
+  h1 {
+      color: white;
+      font: bold 48px 'PT Sans', sans-serif;
+      text-transform: uppercase;
+      display:block;
+      text-align:center;
+    }  
+
+  p {
+    display:block;
+    text-align:center;
+    color: gray;
+    font: 14px / 24px "Droid Serif", serif;
+    margin: 22px 0px;
+  }
+
 }
