url small tweak

--- a/app/views/home/profile.html.haml
+++ b/app/views/home/profile.html.haml
@@ -1,6 +1,6 @@
 %div#folk-slider
   -if @folk
-    %div.slide.first-slide
+    %div.slide.first-slide{:id => @folk.slug}
       =render :partial => "folk", :locals => {:folk => @folk}
   - @other_folks.each do |of|
     %div.slide{:id => of.slug}
