--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,4 +13,4 @@
   = tab_to "OUR PROJECTS", projects_path
   = tab_to "OUR SERVICES", services_path
   = tab_to "OUR BLOG", blog_posts_path
-  = tab_to "CONTACT US", "#contact"
+  = tab_to "CONTACT US", contact_path
