--- a/app/views/home/contact_us.html.haml
+++ b/app/views/home/contact_us.html.haml
@@ -2,6 +2,8 @@
 %h1.centre DONT BE SHY, SAY HELLO
 %p.graytext.centre Let's start up a conversation about what you need and how we can help. We're just a quick email away!
 
+.short-white-line
+
 %dl.tabs.message-tabs
   %dd.active.left-tab
     %a{:href => "#contact"} 
