--- a/app/views/home/_folk.html.haml
+++ b/app/views/home/_folk.html.haml
@@ -1,20 +1,32 @@
 
--if Coshx::Application.assets.find_asset("team/#{folk.slug}.png").nil?
-  =image_tag("team/gabe_kopley.png")
--else
-  =image_tag("team/#{folk.slug}.png")
 
 
+.row
+  .five.columns.push-seven
+    -if Coshx::Application.assets.find_asset("team/#{folk.slug}.png").nil?
+      =image_tag("team/gabe_kopley.png")
+    -else
+      =image_tag("team/#{folk.slug}.png")
 
-.content
-  %h1.folk_name=folk.name
-  %p.folk_bio=folk.bio.html_safe
+  .seven.columns.pull-five
+    .content
+      .folk_header Nickname here
+      %h1=folk.name
+      %p.folk_bio=folk.bio.html_safe
+      
+.folk_wrap
   .folk_header LIKES
   %span=folk.likes
   .folk_header DISLIKES
   %span=folk.dislikes
+  
   .folk_header GITHUB
   %span=folk.github
   .folk_header TWITTER
   %span=folk.twitter
+  
+
+
+
+
 
