--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -22,7 +22,7 @@
     = image_tag "projects.png", :class => :beaker
     = render :partial => "coshx_blue_x", :locals => {:feature => "PROJECTS"}
     %p We've been fortunate enough to work on many great projects. Here's some highlights of the work we've done.
-    = link_to portfolio_path, :class => "blue-arrow" do
+    = link_to projects_path, :class => "blue-arrow" do
       Our Projects
       .arrow
 
