--- a/app/assets/stylesheets/messages.css.scss
+++ b/app/assets/stylesheets/messages.css.scss
@@ -21,6 +21,8 @@ display:block;
 }
 
 
+
+
 label {
 font: bold 11px 'PT Sans', sans-serif;
 color: #004264;
@@ -82,4 +84,35 @@ margin-right:auto;
 
 }
 
+.hidden {
+display:none;
+}
 
+.field-comment {
+  padding-top:5px;
+  .arrow-left {   
+  margin-top:15px;
+  content:' ';
+	width: 0; 
+	height: 0; 
+	border-top: 10px solid transparent;
+	border-bottom: 10px solid transparent; 	
+	border-right:15px solid #004264; 
+	float:left;
+  }
+  
+  .text {
+  font: 12px "Droid Serif", serif;
+  color:white;
+  width:80%;
+  padding:17px 30px;
+	float:left;
+	background: #004264; 
+	min-height:50px;
+  margin-bottom:20px;
+  }
+  &:after {
+  clear:both;
+  }
+  
+}
