responisveness improvement and longer author's name

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -860,7 +860,7 @@ section#testimonials ul{
 	    height: 30px;	
 	    font: 13px/30px 'PT Sans', sans-serif;
 	    color: #FFF;
-	    width: 105px;
+	    width: 155px;
 	    margin-top: 25px;
 	    img{
 	    	display: block;
@@ -915,6 +915,7 @@ padding:50px 0px 0px 0px;
 .featured_projects div {
 margin-left:auto !important;
 margin-right:auto !important;
+float:none;
 }
 
 }
