--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -20,6 +20,30 @@
             %li= link_to 'Edit', edit_project_path(p)
             %li.divider
             %li= link_to 'Destroy', p, :confirm => 'Are you sure?', :method => :delete, :style => "color:red;"
+
+  ="</div>".html_safe if @projects.length % 3 == 0
+  ="<div class=row>".html_safe if @projects.length % 3 == 0
+  %div.four.columns
+    .your_project
+      %a{:href => '/contact#quote'}
+        .cross
+          .cross1
+          .cross2
+        <span>Considering coshx for your next project?</span>
+      .overlay
+        .link-wrapper
+          %a.view{:href => "#"}
+          .separator
+          %a.case{:href => "#"}
+    - if admin_signed_in?
+      .admin_bar
+        %ul.link-list
+          %li= link_to 'Show', p
+          %li= link_to 'Edit', edit_project_path(p)
+          %li.divider
+          %li= link_to 'Destroy', p, :confirm => 'Are you sure?', :method => :delete, :style => "color:red;"
+
+
   = "</div>".html_safe
 
 - if admin_signed_in?
