--- a/app/views/home/services.html.haml
+++ b/app/views/home/services.html.haml
@@ -1,13 +1,72 @@
-%section.primary
-  %h2 Services
-  %h3 We love working on both new startup ideas as well as existing large application codebases. While we all enjoy experimenting with new technologies and ideas, our core services here reflect our <strong>core expertise</strong>.
 
-  %ul
-    - @services.each do |service|
-      %li{:class => class_for_service(service)}
-        .stretch-small-offset
-          %h2
-            = service.title
-          .service-description
-            = service.description.html_safe
+%h1.centre WE ARE ALL ABOUT THE WEB
+%p.graytext.centre Let's start up a conversation about what you need and how we can help. We're just a quick email away!
 
+.short-white-line
+
+.row
+  .services_box
+    =image_tag("services/circles.png")
+    %a.circle.circle0
+    %a.circle.circle1
+    %a.circle.circle2
+    %a.circle.circle3
+    %a.circle.circle4
+    %a.circle.circle5
+    %a.middle
+    
+.row
+  %h2.star-header
+    Web Development
+
+.services
+  .row
+    .two.columns.mobile-one
+      %a.circle
+    .ten.columns.mobile-three
+      %h5 RUBY ON RAILS
+      %p
+        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+  .row
+    .two.columns.mobile-one
+      %a.circle
+    .ten.columns.mobile-three
+      %h5 RUBY ON RAILS
+      %p
+        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+  .row
+    .two.columns.mobile-one
+      %a.circle
+    .ten.columns.mobile-three
+      %h5 RUBY ON RAILS
+      %p
+        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+    
+
+.row
+  %h2.star-header
+    Web Design
+
+.services
+  .row
+    .two.columns.mobile-one
+      %a.circle
+    .ten.columns.mobile-three
+      %h5 RUBY ON RAILS
+      %p
+        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+  .row
+    .two.columns.mobile-one
+      %a.circle
+    .ten.columns.mobile-three
+      %h5 RUBY ON RAILS
+      %p
+        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+  .row
+    .two.columns.mobile-one
+      %a.circle
+    .ten.columns.mobile-three
+      %h5 RUBY ON RAILS
+      %p
+        We focus on lean startup tactics, helping you get to your Minimum Viable Product (MVP) in a timely, cost-effective manner. We understand that as your business develops, requirements can change drastically, so we develop in a transparent, agile manner to ensure that you always have a good grasp of the project timelines and budgets.
+  
