--- a/app/views/home/services.html.haml
+++ b/app/views/home/services.html.haml
@@ -8,12 +8,19 @@
   .services_box
     =image_tag("services/circles.png")
     %a.circle.circle0
+      .icon.idea-icon
     %a.circle.circle1
+      .icon.books-icon
     %a.circle.circle2
+      .icon.design-icon
     %a.circle.circle3
+      .icon      
     %a.circle.circle4
+      .icon.develop-icon
     %a.circle.circle5
+      .icon.produce-icon
     %a.middle
+      .icon.process-icon
     
 .row
   %h2.star-header
