--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -26,9 +26,8 @@
     .footer-tweet
       %p
         Loading tweets, just a moment...
-      = link_to "https://www.twitter.com/coshxlabs", :class => "dark-blue-arrow" do
+      = link_to "https://www.twitter.com/coshxlabs", :class => "a-button darkblue" do
         Follow Us
-        .arrow
     %h2.contact-heading ONLY ONE THING LEFT TO DO. CONTACT US USING YOUR PREFERRED METHOD BELOW.
     %div.contact-details.row
       .three.columns
@@ -57,9 +56,8 @@
         CONSIDERING COSHX FOR
         %br/
         YOUR NEXT PROJECT?
-        = link_to "mailto:info@coshx.com?subject=Coshx%20Labs%20quote%20request", :class => "blue-arrow" do
+        = link_to "mailto:info@coshx.com?subject=Coshx%20Labs%20quote%20request", :class => "a-button" do
           Get a Proposal
-          .arrow
     .footer-bottom
       %span.copy Copyright © 2012 Coshx Labs. All rights reserved
       \•
