--- a/app/views/messages/_contact.html.haml
+++ b/app/views/messages/_contact.html.haml
@@ -30,8 +30,8 @@
         = f.label :text
         = f.text_area :text
       .link
-        %a.dark-blue-arrow.submit-link{:href => '#'}
-          ='Save <div class="arrow"></div>'.html_safe
+        %a.a-button.darkblue.submit-link{:href => '#'}
+          ='Send mail'.html_safe
 
 %script(type="text/javascript")
   function validateEmail(email) { 
