--- a/app/views/messages/_quote.html.haml
+++ b/app/views/messages/_quote.html.haml
@@ -38,8 +38,8 @@
           = f.label :phone
           = f.text_field :phone
         .link
-          %a.dark-blue-arrow.next-link{:href => '#', "data-slide" => '2'}
-            ='Continue to The Next Step <div class="arrow"></div>'.html_safe
+          %a.a-button.darkblue.next-link{:href => '#', "data-slide" => '2'}
+            ='Continue to The Next Step'.html_safe
       
   .quote-slide.slide2
     .field  
@@ -49,9 +49,9 @@
       = f.label :deadline
       = f.text_field :deadline
     .link
-      %a.dark-blue-arrow.next-link{:href => '#', "data-slide" => '1'}
+      %a.a-button.darkblue.next-link{:href => '#', "data-slide" => '1'}
         ='← Back'.html_safe
-      %a.dark-blue-arrow.next-link{:href => '#', "data-slide" => '3'}
+      %a.a-button.darkblue.next-link{:href => '#', "data-slide" => '3'}
         ='Continue to The Next Step <div class="arrow"></div>'.html_safe
     
   .quote-slide.slide3  
@@ -62,9 +62,9 @@
       = f.label :comment
       = f.text_area :comment
     .link
-      %a.dark-blue-arrow.next-link{:href => '#', "data-slide" => '2'}
+      %a.a-button.darkblue.next-link{:href => '#', "data-slide" => '2'}
         ='← Back'.html_safe
-      %a.dark-blue-arrow.quote-submit-link{:href => '#'}
+      %a.a-button.darkblue.quote-submit-link{:href => '#'}
         ='Save <div class="arrow"></div>'.html_safe
 
 %script(type="text/javascript")
@@ -92,6 +92,7 @@
   }
   return result;  
   }
+  
   $(document).ready(function () {
   $(".next-link").click(function (e) {
   e.preventDefault();
@@ -100,6 +101,6 @@
   });
   $(".quote-submit-link").click(function (e) {
   e.preventDefault();
-  if (validate_quote() ==1) $("#quote-form").submit();
+  if (validate_quote() == 1) $("#quote-form").submit();
   });
   });
