--- a/app/views/projects/_list.html.haml
+++ b/app/views/projects/_list.html.haml
@@ -1,9 +1,8 @@
 %section#featured-projects
   %header.divider
     %h2 Featured Projects
-    = link_to "#", :class => "blue-arrow" do
+    = link_to "#", :class => "a-button" do
       See More Case Studies
-      .arrow
 
 %div.featured_projects.row
   - featured_projects.each_with_index do |fp, i|
